k8_ingress/k8_ingress/devsecops-loan.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  devsecops

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devsecops
  name: devsecops-loan-deployment
  labels:
    app.kubernetes.io/name: devsecops-loan
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: devsecops-loan
  template:
    metadata:
      labels:
        app.kubernetes.io/name: devsecops-loan
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - name: devsecops-blue
        image: timpamungkas/devsecops-loan:1.0.0
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "0.3"
            memory: 128M
        ports:
        - name:  http
          containerPort: 8111
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /loan/actuator/health/readiness
            port: 8111
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /loan/actuator/health/liveness
            port: 8111
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  replicas: 2

---

apiVersion: v1
kind: Service
metadata:
  namespace: devsecops
  name: devsecops-loan-loadbalancer
  labels:
    app.kubernetes.io/name: devsecops-loan
spec:
  selector:
    app.kubernetes.io/name: devsecops-loan
  type: LoadBalancer
  ports:
  - port: 8111
    targetPort: 8111
    name: devsecops-loadbalancer-loan
