k8_ingress/k8_ingress/ingress-nginx-marketing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: devsecops
  name: devsecops-ingress-nginx-marketing
  labels:
    app.kubernetes.io/name: devsecops-ingress-nginx-marketing
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /marketing
        pathType: Prefix
        backend:
          service:
            name: devsecops-marketing-clusterip
            port:
              number: 8222
